--- a/style.css
+++ b/style.css
@@ -5,3 +5,11 @@ html, body{
     width: 100%;
     height: 100%;
 }
+
+#myCanvas 
+{
+	position:fixed;
+	top:0px;
+    left:0px;
+    background-color: grey;
+}
