--- a/style.css
+++ b/style.css
@@ -1,15 +1,20 @@
-    /* INDEX */
-/* 1. GENRAL = l.8 */
-/* 2. HUD = l.22 */
-/* 3. xxx = l. */
-/* 4. xxx = l. */
+                    /*---------*\
+                    /*  INDEX  *\
+                    /*---------*\
+/* 
+                1. GENERAL = l. xxx
+                2. HUD = l. xxx
+                3. Tiles & Sprites = l. xxx
+                4. Canvas = l. xxx
+ */
 
-/* ---------------------*/
-/* ---------------------*/
+/* ---------------------*//* ---------------------*/
+/* ---------------------*//* ---------------------*/
 
-/***********/ 
-/* GENERAL */
-/***********/ 
+    /****************/
+    /** 1. GENERAL **/
+    /****************/
+
 html, body
 {
     margin: 0px;
@@ -21,12 +26,30 @@ html, body
     font-family: 'Roboto', sans-serif;
     font-size: 30px;
 }
+img
+{
+  
+}
+#TilesMurs
+{
+    text-align: center;
+}
+img.Tiles
+{
+}
+
+footer
+{
+    text-align: center;
+    font-size: 20px;
+}
 
 /* ---------------------*/
+/* ---------------------*/
 
-/***********/ 
-/*** HUD ***/
-/***********/ 
+/**************/ 
+/*** 2. HUD ***/
+/**************/ 
 
 /* Le header est le container pour le HUD */
 /* HUD et HUDelements */
@@ -71,11 +94,32 @@ html, body
     border: none;
 }
 
+/* ---------------------*/
+/* ---------------------*/
+
+/************************/ 
+/** 4. Tiles & Sprites **/
+/************************/ 
+
+
+
+/* ---------------------*/
+/* ---------------------*/
+
+/****************/ 
+/** 4. Canvas **/
+/***************/ 
+
 #myCanvas /* canvas du jeu */
 {
-    position:fixed; /* position du canvas */
-    width: 1920px; height : 1080px; /* dimensions du canvas */
-	margin: 0px; padding: 0px; /* marge du canvas */
-    background-color: rgb(230, 230, 230); /* couleur de fond du canvas */
+    width: 1600px; height: 800px; /* dimensions du canvas */
+    margin-left: 160px; margin-right: 160px; /* margin du canvas */
+    background-color: rgb(255, 255, 255); /* couleur de fond du canvas */
+    border: 5px double black; /* cbordure du canvas */
+
+}
+div#myCanvas /* canvas du jeu */
+{
+
 }
 
