--- a/style.css
+++ b/style.css
@@ -37,11 +37,24 @@ img
 img.Tiles
 {
 }
-
+header
+{
+    height: 200px;
+    width: 1920px;
+}
 footer
 {
     text-align: center;
     font-size: 20px;
+}
+div>.mur0, div>.mur1, div>.mur2, div>.mur3, div>.mur4, div>.mur5, div>.mur6, div>.mur7,
+div>.mur8, div>.mur9, div>.mur10, div>.mur11, div>.mur12, div>.mur13, div>.mur14, div>.mur15
+{
+    height: 50px;
+}
+header>div
+{
+    height: none;
 }
 
 /* ---------------------*/
@@ -98,10 +111,138 @@ footer
 /* ---------------------*/
 
 /************************/ 
-/** 4. Tiles & Sprites **/
+/** 3. Tiles & Sprites **/
 /************************/ 
 
+/* --  MURS -- */
+.mur0
+{
+    width: 50px;
+    height: 50px;
+    background-image: url('assets/img/mur0.png');
+    display: inline-block;
+}
+.mur1
+{
+    width: 50px;
+    height: 50px;
+    background-image: url('assets/img/mur1.png');
+    display: inline-block;
+}
+.mur2
+{
+    width: 50px;
+    height: 50px;
+    background-image: url('assets/img/mur2.png');
+    display: inline-block;
+}
+.mur3
+{
+    width: 50px;
+    height: 50px;
+    background-image: url('assets/img/mur3.png');
+    display: inline-block;
+}
+.mur4
+{
+    width: 50px;
+    height: 50px;
+    background-image: url('assets/img/mur4.png');
+    display: inline-block;
+}
+.mur5
+{
+    width: 50px;
+    height: 50px;
+    background-image: url('assets/img/mur5.png');
+    display: inline-block;
+}
+.mur6
+{
+    width: 50px;
+    height: 50px;
+    background-image: url('assets/img/mur6.png');
+    display: inline-block;
+}
+.mur7
+{
+    width: 50px;
+    height: 50px;
+    background-image: url('assets/img/mur7.png');
+    display: inline-block;
+}
+.mur8
+{
+    width: 50px;
+    height: 50px;
+    background-image: url('assets/img/mur8.png');
+    display: inline-block;
+}
+.mur9
+{
+    width: 50px;
+    height: 50px;
+    background-image: url('assets/img/mur9.png');
+    display: inline-block;
+}
+.mur10
+{
+    width: 50px;
+    height: 50px;
+    background-image: url('assets/img/mur10.png');
+    display: inline-block;
+}
+.mur11
+{
+    width: 50px;
+    height: 50px;
+    background-image: url('assets/img/mur11.png');
+    display: inline-block;
+}
+.mur12
+{
+    width: 50px;
+    height: 50px;
+    background-image: url('assets/img/mur12.png');
+    display: inline-block;
+}
+.mur13
+{
+    width: 50px;
+    height: 50px;
+    background-image: url('assets/img/mur13.png');
+    display: inline-block;
+}
+.mur14
+{
+    width: 50px;
+    height: 50px;
+    background-image: url('assets/img/mur14.png');
+    display: inline-block;
+}
+.mur15
+{
+    width: 50px;
+    height: 50px;
+    background-image: url('assets/img/mur15.png');
+    display: inline-block;
+}
+/* --  FANTOMES -- */
 
+
+/* --  PACMAN -- */
+.pacman
+{
+    width: 50px;
+    height: 50px;
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Pacman.svg/220px-Pacman.svg.png');
+    display: inline-block;
+}
+
+/* --  PIECES -- */
+
+
+/* --  BONUS -- */
 
 /* ---------------------*/
 /* ---------------------*/
